--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/node": "22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/tinycolor2": "^1.4.6",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/coverage-v8": "3.0.8",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -39,6 +41,7 @@
     "happy-dom": "17.4.4",
     "msw": "^2.7.3",
     "prettier": "2.8.8",
+    "tinycolor2": "^1.6.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "6.2.0",
