--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "4.0.14",
+    "@tanstack/react-query": "^5.80.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "6.30.0",
-    "tailwindcss": "4.0.14"
+    "tailwindcss": "4.0.14",
+    "clsx": "^2.1.1",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
     "@testing-library/user-event": "14.6.1",
@@ -33,7 +37,6 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/coverage-v8": "3.0.8",
     "autoprefixer": "^10.4.21",
-    "clsx": "^2.1.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -41,7 +44,6 @@
     "happy-dom": "17.4.4",
     "msw": "^2.7.3",
     "prettier": "2.8.8",
-    "tinycolor2": "^1.6.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "6.2.0",
