--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   "dependencies": {
     "@tailwindcss/vite": "4.0.14",
     "@tanstack/react-query": "^5.80.7",
+    "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "6.30.0",
     "tailwindcss": "4.0.14",
-    "clsx": "^2.1.1",
     "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/eslint-plugin-query": "^5.78.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
